<resources>
    <string name="app_name">ArmarkApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="facebook_app_id">cSFPNYQpHfu0g/YsxQZR2lnkhBk=</string>
    <string name="textoBuscar">Buscar</string>

    <!-- Generales -->
    <string name="promociones">Promociones</string>
    <string name="productos">Productos</string>
    <string name="almacenes">Almacenes</string>
    <string name="perfil">Perfil</string>

    <!-- Menu Principal -->
    <array name="arrayTextoSuperiorMenu">
        <item>@string/promociones</item>
        <item>@string/productos</item>
        <item>@string/almacenes</item>
        <item>@string/perfil</item>
        <item>@string/perfil</item>
    </array>
    <string name="textoBuscarLista">Buscar...</string>
    <string name="textoSinDescripcion">Sin descripción</string>

    <!-- LOGIN -->
    <string name="textoEmail">Email</string>
    <string name="textoContrasena">Contraseña</string>
    <string name="textoIngresar">Ingresar</string>
    <string name="textoRegistrarse">Registrarse</string>
    <string name="textoResetearContrasena">Resetear Contraseña</string>
    <string name="textoRepetirContrasena">Repetir Contraseña</string>
    <string name="textoNombre">Nombre</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
