<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/frg_login_edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/frg_login_edtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoContrasena"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_frg_login_btnIngresar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textoIngresar" />

        <Button
            android:id="@+id/btn_frg_login_btnRegistrarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textoRegistrarse" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_frg_login_btnResetearContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textoResetearContrasena" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_button_face_twit"
        android:layout_marginBottom="@dimen/dimen_login_distancia_boton_inf1"
        android:layout_marginTop="@dimen/dimen_login_distancia_boton_sup1" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/btn_login_twitter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_button_face_twit"
        android:layout_marginTop="@dimen/dimen_login_distancia_boton_sup2" />
</LinearLayout>